--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -2,6 +2,7 @@
 title: My First Post
 layout: default
 ---
+<body>
 <main class="page landing-page">
   <section class="clean-block clean-hero"
     style="background-image:url(&quot;assets/img/iet-upview.jpg&quot;);color:#a046b480;">
@@ -176,3 +177,14 @@ layout: default
     </div>
   </section>
 </main>
+
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="/__/firebase/7.6.1/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<script src="/__/firebase/7.6.1/firebase-analytics.js"></script>
+
+<!-- Initialize Firebase -->
+<script src="/__/firebase/init.js"></script>
+</body>
