SMP Courses work
Signed-off-by: Nirmal Khedkar <nirmalhk7@gmail.com>

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,10 +15,10 @@
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.15/css/dataTables.bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css">
     <link rel="stylesheet" href={{ "/assets/css/Loading-Div.css" | relative_url }}>
-    <link rel="stylesheet" href={{ "/assets/css/modern.min.css" | relative_url }}>
-    <link rel="stylesheet" href={{ "/assets/css/custom.min.css" | relative_url }}>
+    <link rel="stylesheet" href={{ "/assets/css/modern.css" | relative_url }}>
+    <link rel="stylesheet" href={{ "/assets/css/custom.css" | relative_url }}>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> {% seo %}
-
+    <link href="https://fonts.googleapis.com/css?family=Changa:600&display=swap" rel="stylesheet">
     <style>
       .ytplayer {
 pointer-events: none;
@@ -41,6 +41,7 @@ pointer-events: none;
             height: 100%;
         }
     </style>
+    {% seo %}
 </head>
 
 <body>
@@ -59,7 +60,6 @@ pointer-events: none;
     <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.15/js/dataTables.bootstrap.min.js"></script>
     <script src={{ "/assets/js/smoothproducts.min.js" | relative_url }}></script>
-
     <script src={{ "/assets/js/accordion.min.js" | relative_url }}></script>
     <script src={{ "/assets/js/theme.js" | relative_url }}></script>
     <script src={{ 'assets/js/navbar.js' | relative_url }}></script>
