--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -28,7 +28,7 @@ layout: default
   </div>
   <section class="clean-block about-us" id="about-us">
     <div class="container">
-      <div class="block-heading">
+      <div class="block-heading mobile-marginx2">
         <h2 class="text-info">Who are we?</h2>
       </div>
       <div class="row">
